Fixed some spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,4 +28,5 @@ input[type="text"]{
 }
 
 .main-content {
+  padding-bottom: 5vw;
 }
